CRUD: candidate, company, job, jobSKill